@@ -2,6 +2,13 @@ CHANGELOG
 =========
 
 
+2019-08-03
+----------
+
+### Changelog extractor
+- optionally use previous version from parameter (#4)
+
+
 2019-07-25
 ----------
 
